# geant4-interface

./: README.md  pyproject.toml
docs/examples/: deposited_energy_histogram.py  sim_with_gui.py  use_general_particle_source.py  vrml_view.py
resources/source/Geant4_Interface/: CMakeLists.txt  Geant4_Interface.cc
resources/source/Geant4_Interface/include/: ActionInitialization.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
resources/source/Geant4_Interface/src/: ActionInitialization.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
src/geant4_interface/: data_analysis.py  geometry.py  macros.py  utils.py  wsl_interface.py
src/geant4_interface/data_analysis/: histogram.py  tracking.py
test/: geometry.gdml  init_headless.mac  init_ui.mac  test.py  test_tracking.py
